Fix react env variables

--- a/examples/ent-project/gqlgen.yml
+++ b/examples/ent-project/gqlgen.yml
@@ -7,7 +7,7 @@ schema:
 exec:
   dir: ./
   filename: gql-generated.go
-  package: todo
+  package: ent_project
 
 resolver:
   # Tell gqlgen to generate resolvers next to the schema file.
