--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,6 @@ services:
     build:
       context: "./"
       args:
-        GRAPHQL_URI: "https://demo.entrefine.dev"
+        GRAPHQL_URI: "https://demo.entrefine.dev/query"
     ports:
       - "80:80"
