--- a/examples/refine-project/package.json
+++ b/examples/refine-project/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@pankod/refine-antd": "^4.7.1",
     "@pankod/refine-cli": "^1.17.0",
-    "@pankod/refine-core": "^3.95.3",
-    "@pankod/refine-inferencer": "^2.2.2",
+    "@pankod/refine-core": "^3.99.2",
+    "@pankod/refine-inferencer": "^2.4.0",
     "@pankod/refine-react-router-v6": "^3.38.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -23,6 +23,8 @@
     "@types/jest": "^26.0.23",
     "@uiw/react-textarea-code-editor": "^2.0.6",
     "camelcase": "^6.2.0",
+    "gojs": "^2.3.1",
+    "gojs-react": "^1.1.1",
     "gql-query-builder": "^3.5.5",
     "graphql": "^15.6.1",
     "graphql-request": "^4.3.0",
@@ -30,17 +32,18 @@
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph-2d": "^1.23.17",
+    "react-force-graph-3d": "^1.21.19",
     "react-quill": "^2.0.0",
     "react-scripts": "^5.0.0",
-    "reaflow": "^5.1.2",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.171",
     "@types/node": "^12.20.10",
     "@types/pluralize": "^0.0.29",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "typescript": "^4.7.4"
   },
   "eslintConfig": {
