--- a/examples/refine-project/package.json
+++ b/examples/refine-project/package.json
@@ -6,12 +6,14 @@
       "last 1 safari version"
     ],
     "production": [
-      "\u003e0.2%",
+      ">0.2%",
       "not dead",
       "not op_mini all"
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@pankod/refine-antd": "^4.7.1",
     "@pankod/refine-cli": "^1.17.0",
     "@pankod/refine-core": "^3.99.2",
