Prepare to demo

--- a/server-templates/Dockerfile.godockerfile
+++ b/server-templates/Dockerfile.godockerfile
@@ -17,6 +17,9 @@ RUN go mod tidy
 RUN go build -o /usr/local/bin/entkit ./{{$.Name}}/*.go
 
 # Run binary
-ENTRYPOINT ["entkit"]
+ENTRYPOINT ["/bin/sh", "-c"]
+
+# Command
+CMD ["entkit"]
 
 {{- end -}}
