Dockerfile template change

--- a/server-templates/Dockerfile.godockerfile
+++ b/server-templates/Dockerfile.godockerfile
@@ -3,7 +3,7 @@
 {{- define "Dockerfile" -}}
 {{- $.Extension.FileHeader | ER_replace "^" "#" }}
 
-FROM golang:1.19-alpine
+FROM golang:1.19-alpine as build
 
 # Deps
 RUN apk add --no-cache alpine-sdk
@@ -15,7 +15,11 @@ ADD . /app
 
 # Build
 RUN go mod tidy
-RUN go build -o /usr/local/bin/entkit ./{{$.Name}}/*.go
+RUN go build -o /entkit ./{{$.Name}}/*.go
+
+FROM alpine:latest
+
+COPY --from=build /entkit /bin/entkit
 
 # Run binary
 ENTRYPOINT ["/bin/sh", "-c"]
