--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -coverprofile=coverage.out ./...
     
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
